--- a/main.tex
+++ b/main.tex
@@ -63,8 +63,8 @@
 \begin{tabularx}{\linewidth}{@{} C @{}}
 \color[HTML]{1C033C} \Huge{Anuj Kumar Chaudhary} \\[6pt]
 \\
-\textcolor[HTML]{371e77}{\underline{\href{mailto:your@email.com}{\raisebox{-0.05\height}{\faEnvelope} anuj.kumarchaudhary038@gmail.com}} $|$}
-\textcolor[HTML]{371e77}{\underline{\href{mailto:anuj.kumarchaudhary038@gmail.com}{\raisebox{-0.05\height}{\faEnvelope} anuj.2024ec1144@kiet.edu}} $|$}
+\textcolor[HTML]{371e77}{\underline{\href{mailto:anuj.kumarchaudhary038@gmail.com}{\raisebox{-0.05\height}{\faEnvelope} anuj.kumarchaudhary038@gmail.com}} $|$}
+\textcolor[HTML]{371e77}{\underline{\href{mailto:anuj.2024ec1144@kiet.edu}{\raisebox{-0.05\height}{\faEnvelope} anuj.2024ec1144@kiet.edu}} $|$}
 \textcolor[HTML]{371e77}{\href{tel:+919807145009}{\raisebox{-0.05\height}{\faMobile} +91 9807145009}}
 
 \textcolor[HTML]{371e77}{\underline{\href{https://github.com/akc2531}{\raisebox{-0.05\height}{\faGithub} github.com/akc2531}} $|$}
