--- a/main.tex
+++ b/main.tex
@@ -74,8 +74,8 @@
 % Education
 \section{Education}
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\color[HTML]{1C033C} \textbf{KIET Group of Instituions} & \hfill \color[HTML]{371e77} Expected graduation date: Jun. 2024 \\
-\color[HTML]{371e77} B.Tech. in Electronics and Communication Engineering$|$ {\uline{\href{https://akc2531.github.io/MyPortfolio/}{Link to all courses}}} & \hfill \color[HTML]{4B28A4} \textit{\textbf{Percentage: 74.29}} \\
+\color[HTML]{1C033C} \textbf{KIET Group of Instituions} & \hfill \color[HTML]{371e77} | 2024 \\
+\color[HTML]{371e77} B.Tech. in Electronics and Communication Engineering {{{}{Link to all ccccccccccccccccccccourses}}} & \hfill \color[HTML]{4B28A4} \textit{\textbf{Percentage: 75}} \\
 \color[HTML]{1C033C} \textbf{St. Basil's School, Basti} & \hfill \color[HTML]{371e77} | 2019 \\
 \color[HTML]{371e77} Senior Secondary(CISCE)  & \hfill \color[HTML]{4B28A4} \textit{\textbf{Percentage: 84.80}} \\
 \color[HTML]{1C033C} \textbf{St. Basil's School, Basti} & \hfill \color[HTML]{371e77} | 2017 \\
@@ -113,7 +113,7 @@
 % Projects
 \section{Projects}
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\color[HTML]{1C033C} \textbf{\uline{\href{https://github.com/akc2531/COALMINERS}{Smart Helmet for Coal Miners}}} \hfill \color[HTML]{371e77} Jul. 2023 - Ongoing \\[4pt]
+\color[HTML]{1C033C} \textbf{\uline{\href{https://github.com/akc2531/COALMINERS}{Smart Helmet for Coal Miners}}} \hfill \color[HTML]{371e77} Jul. 2023 - Dec.2023 \\[4pt]
 \color[HTML]{371e77}\textbf{\textit{Coal Miner Sensor Monitoring System }} \hfill \color[HTML]{4B28A4} \textit{ JavaScript, HTML, CSS, ThingSpeak, Arduino IDE} \\[5pt]
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=2em, itemsep=2pt]
