--- a/main.tex
+++ b/main.tex
@@ -64,12 +64,13 @@
 \color[HTML]{1C033C} \Huge{Anuj Kumar Chaudhary} \\[6pt]
 \\
 \textcolor[HTML]{371e77}{\underline{\href{mailto:anuj.kumarchaudhary038@gmail.com}{\raisebox{-0.05\height}{\faEnvelope} anuj.kumarchaudhary038@gmail.com}} $|$}
-\textcolor[HTML]{371e77}{\underline{\href{mailto:anuj.2024ec1144@kiet.edu}{\raisebox{-0.05\height}{\faEnvelope} anuj.2024ec1144@kiet.edu}} $|$}
 \textcolor[HTML]{371e77}{\href{tel:+919807145009}{\raisebox{-0.05\height}{\faMobile} +91 9807145009}}
 
 \textcolor[HTML]{371e77}{\underline{\href{https://github.com/akc2531}{\raisebox{-0.05\height}{\faGithub} github.com/akc2531}} $|$}
 \textcolor[HTML]{371e77}{\underline{\href{https://www.linkedin.com/in/anuj-kumar-chaudhary-analytics/}{\raisebox{-0.05\height}{\faLinkedin} linkedin.com/in/anuj-kumar-chaudhary-analytics/}}}
 \end{tabularx}
+\section*{Professional Summary}
+Detail-oriented and highly motivated aspiring \textbf{Cloud Data Engineer} with a B.Tech in Electronics and Communication Engineering and practical experience in frontend development, IoT, and data visualization. Proficient in \textbf{Python, SQL, GCP basics}, and \textbf{data pipeline architecture}. Trained in cybersecurity and software quality assurance, with strong troubleshooting and collaboration skills. Seeking to leverage my foundational skills and adaptability to support enterprise-grade data solutions at \textbf{Google Cloud}.
 
 % Education
 \section{Education}
