--- a/main.tex
+++ b/main.tex
@@ -75,7 +75,7 @@ Detail-oriented and highly motivated aspiring \textbf{Cloud Data Engineer} with 
 % Education
 \section{Education}
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\color[HTML]{1C033C} \textbf{KIET Group of Instituions} & \hfill \color[HTML]{371e77} | 2024 \\
+\color[HTML]{1C033C} \textbf{KIET Group of Institutions} & \hfill \color[HTML]{371e77} | 2024 \\
 \color[HTML]{371e77} B.Tech. in Electronics and Communication Engineering {{{}{Link to all ccccccccccccccccccccourses}}} & \hfill \color[HTML]{4B28A4} \textit{\textbf{Percentage: 75}} \\
 \color[HTML]{1C033C} \textbf{St. Basil's School, Basti} & \hfill \color[HTML]{371e77} | 2019 \\
 \color[HTML]{371e77} Senior Secondary(CISCE)  & \hfill \color[HTML]{4B28A4} \textit{\textbf{Percentage: 84.80}} \\
